# MAMOF-Multi-Agent-Maze-Objective-Finding

./: Cargo.toml  README.md  flake.nix  make_plots.sh  run_all_configs.sh
src/: agent.rs  cli_args.rs  headless.rs  main.rs  maze.rs  rng.rs  settings.rs  simulation.rs
src/controls/: camera_controller.rs  mod.rs  simulation_controller.rs
src/render/: agent_render.rs  maze_render.rs  mod.rs
src/ui/: mod.rs  simulation.rs
src/ui/main_menu/: agent_selector.rs  communication_options.rs  grid_size_selector.rs  mod.rs  quit.rs  seed_input.rs  speed_selector.rs  start.rs  title.rs
src/utils/: heuristics.rs  mod.rs  node_utils.rs
